# esp32_Lcd_1_28_inch

./: .gitignore  CMakeLists.txt  ReadMe.md  partitions.csv
components/: lv_conf.h
components/CS816D/: CMakeLists.txt  CS816D.c  Readme.md
components/CS816D/include/: CS816D.h
components/Display/: CMakeLists.txt  Display.c
components/GC9A01/: CMakeLists.txt  GC9A01.c  Readme.md
components/GC9A01/include/: GC9A01.h
components/HTTP/: CMakeLists.txt  HTTP.c
components/HTTP/include/: HTTP_Client.h
components/SquareLine/: CMakeLists.txt
components/SquareLine/UI/: ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/SquareLine/UI/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_wifiitems.c  ui_comp_wifiitems.h
components/SquareLine/UI/screens/: ui_BrightNessAjustScreen.c  ui_BrightNessAjustScreen.h  ui_MenuScreen.c  ui_MenuScreen.h  ui_WeatherScreen.c  ui_WeatherScreen.h  ui_WifiScreen.c  ui_WifiScreen.h  ui_WifiTyping.c  ui_WifiTyping.h
components/UI/: CMakeLists.txt  Readme.md  UI.c
components/UI/include/: UI.h
components/Wifi_Scan/: CMakeLists.txt  Wifi_Scan.c
components/Wifi_Scan/include/: Wifi_Scan.h
components/common/: CMakeLists.txt
components/common/include/: DataDef.h  RamDef.h
main/: CMakeLists.txt  main.c
